--- a/web1/src/app/admin/company-setting/company-setting.component.html
+++ b/web1/src/app/admin/company-setting/company-setting.component.html
@@ -57,7 +57,8 @@
                                                                 required>
                                                                 <mat-option value="en-IN">India</mat-option>
                                                                 <mat-option value="en-US">USA</mat-option>
-                                                                <mat-option value="ar-ae">UAE</mat-option>
+                                                                <mat-option value="ar-AE">UAE</mat-option>
+                                                                <mat-option value="rw-RW">Rwanda</mat-option>
                                                             </mat-select>
                                                             <mat-error>Select country</mat-error>
                                                         </mat-form-field>
