--- a/web1/src/app/report/sale-report/sale-report.component.html
+++ b/web1/src/app/report/sale-report/sale-report.component.html
@@ -3213,6 +3213,7 @@
                                                         [(ngModel)]="OForm.ProductStatus">
                                                         <mat-option value="All">All</mat-option>
                                                         <mat-option value="Order Request">Order Request</mat-option>
+                                                        <mat-option value="Order Transfer">Order Transfer</mat-option>
                                                         <mat-option value="Order Complete">Order Complete</mat-option>
                                                     </mat-select>
                                                 </mat-form-field>
