--- a/web1/src/app/inventory/order-form/order-form.component.css
+++ b/web1/src/app/inventory/order-form/order-form.component.css
@@ -181,3 +181,13 @@ tr.mat-footer-row {
   transition: 0.5s;
   box-shadow: 2px 2px 6px #9c9795fa;
 }
+
+.red-button {
+  background-color: red;
+  color: white;
+}
+
+.blue-button {
+  background-color: #3f51b5;
+  color: white;
+}
